Style scores to prevent excessive wrapping

--- a/src/components/styles/Leaderboard.css
+++ b/src/components/styles/Leaderboard.css
@@ -15,6 +15,8 @@
     display: grid;
     grid-auto-flow: column;
     margin-top: 10px;
+    grid-template-columns: 1.2fr 0.8fr;
+    align-items: first baseline;
 
     .user-name {
       max-width: 90%;
@@ -24,6 +26,8 @@
 
     .user-score {
       text-align: end;
+      font-size: 0.8rem;
+      height: 40px;
     }
   }
 
